k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: #customizing how this deplyment behaves
  replicas: 3 #number of pods; for example three pods
  selector: #selector that deployment is going to use defined in the set of pods we are going to control
    matchLabels:
      component: server #this can be anything, but we are putting component:server so we can clearly know 
                        #what are we linking to.
  template: #specifying the pod template
    metadata:
      labels:
        component: server #can be more than one label but it must at  least coincide the matchlabel above.
    spec: #customize the pod behaviour.
      containers: #can be more than one contaier        
        - name: server
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000 #this port is the port the service must reach in order to talk this pod
